--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ node_modules
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -19,4 +20,6 @@ node_modules
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log*.env
+.vercel
+vercel.json
